NoIssue: unittests improved